feat: add color scheme toggle button with default styles and save selected color scheme to local storage for persistence

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Scheme Switcher</title>
 </head>
-
+<link rel="stylesheet" href="style.css">
 <body>
     <nav>
-        <a href="/" aria-current="page">Home</a>
-        <a target="_blank" href="https://www.youtube.com/@safdarali_">YouTube Channel</a>
+        <a class="newa" href="/" aria-current="page">Home</a>
+        <a class="newa"  target="_blank" href="https://www.youtube.com/@safdarali_">YouTube Channel</a>
     </nav>
 <div class="canvas">    
-<h1>Color Scheme Switcher</h1>
+<h1 class="colorHead">Color Scheme Switcher</h1>
 
 <span class="button" id="grey"></span>
 <span class="button" id="white"></span>
-<span class="button" id="blue "></span>
+<span class="button" id="blue"></span>
 <span class="button" id="yellow"></span>
  
 
 </div>
-
+<script src="index.js"></script>
 
 </body>
 
